--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.0",
+    "@lezer/highlight": "^1.1.6",
     "@mui/base": "5.0.0-beta.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-switch": "^1.0.3",
@@ -28,6 +29,10 @@
     "@tanstack/react-query": "^4.29.11",
     "@tanstack/react-query-devtools": "^4.29.11",
     "@tanstack/react-query-persist-client": "^4.29.12",
+    "@uiw/codemirror-extensions-basic-setup": "^4.21.5",
+    "@uiw/codemirror-extensions-zebra-stripes": "^4.21.5",
+    "@uiw/codemirror-themes": "^4.21.5",
+    "@uiw/react-codemirror": "^4.21.5",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.16",
