--- a/contracts/alephsend/Cargo.toml
+++ b/contracts/alephsend/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "contracts"
+name = "alephsend"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
 ink = { version = "4.2.0", default-features = false }
-
+ink_storage = { version = "4.2.0", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+
+openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", branch="main", default-features = false, features = ["psp22"] }
 
 [dev-dependencies]
 ink_e2e = "4.2.0"
@@ -21,7 +23,9 @@ default = ["std"]
 std = [
     "ink/std",
     "scale/std",
+    "scale-info",
     "scale-info/std",
 ]
+psp22 = ["openbrush/psp22"]
 ink-as-dependency = []
 e2e-tests = []
